# superjob_parser

./: .gitignore  LICENSE  README.md  pyproject.toml
superjob_parser/: superjob_parser.py
superjob_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
