[tool.poetry]
name = "superjob_parser"
version = "0.1.0"
description = "Script to parse internships list from superjob.ru"
authors = ["Artiom Khandamirov <t9max@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
Click = "^7.0"
requests_html = "^0.10.0"
tqdm = "^4.41.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
flake8-mypy = "^17.8.0"
bandit = "^1.6.2"
autopep8 = "^1.4.4"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
